# afg_controller

./: .gitignore  README.md
.github/: copilot-instructions.md
src/afg_controller/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  NAV2_INTEGRATION.md  README.md  TESTING.md  package.xml  pytest.ini  setup.cfg  setup.py
src/afg_controller/afg_controller/: __init__.py  afg_controller.py
src/afg_controller/config/: afg_controller_params.yaml  multiple_controllers_params.yaml
src/afg_controller/include/afg_controller/: afg_controller.hpp
src/afg_controller/launch/: nav2_controller_with_afg.launch.py  test_afg_controller.launch.py
src/afg_controller/plugins/: afg_controller_plugin.xml
src/afg_controller/src/: afg_controller.cpp
src/afg_controller/test/: README.md  __init__.py  test_afg_controller.py  test_data_generator.py
