<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>afg_controller</name>
  <version>0.0.1</version>
  <description>Artificial Flow Guidance (AFG) Controller for ROS2 - Includes both Python standalone node and C++ Nav2 plugin implementations of an AFG-based path following controller for autonomous vehicle navigation</description>
  <maintainer email="noreply@lcas.lincoln.ac.uk">LCAS</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools - hybrid package -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ Nav2 plugin dependencies -->
  <depend>nav2_core</depend>
  <depend>nav2_common</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Python node dependencies -->
  <depend>rclpy</depend>
  <depend>python3-numpy</depend>

  <!-- Common message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugins/afg_controller_plugin.xml" />
  </export>
</package>
